# topolab-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: errors.md  guide.md  index.md  reference.md
examples/: quickstart.py
src/topolab/: __init__.py  _geo.py  _transport.py  async_client.py  client.py  dataset.py  datasets.py  errors.py  models.py
tests/: conftest.py  test_async.py  test_client.py  test_conventions.py  test_dataset.py  test_errors.py  test_example.py  test_geo.py  test_transport.py
