[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topolab"
dynamic = ["version"]
description = "Official Python client for the Topolab dataset and geospatial API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Topolab B.V." }]
dependencies = ["httpx>=0.27", "pydantic>=2.6"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.optional-dependencies]
geo = ["geopandas>=0.14"]
dev = ["pytest>=8", "respx>=0.21", "pytest-asyncio>=0.23", "pyyaml>=6"]

[project.urls]
Homepage = "https://topolab.nl"
Documentation = "https://docs.topolab.nl"

[tool.hatch.version]
path = "src/topolab/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/topolab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
